[package]
name = "fst_compression"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
